changes in repository

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=8081
 spring.application.name=user-info
-#spring.cloud.config.uri=http://192.168.99.101:8888
-spring.cloud.config.uri=http://locahost:8888
-#eureka.client.service-url.defaultZone=http://192.168.99.101:8761/eureka
-eureka.client.service-url.defaultZone=http://127.0.0.1:8761/eureka
+spring.cloud.config.uri=http://192.168.99.101:8888
+#spring.cloud.config.uri=http://locahost:8888
+eureka.client.service-url.defaultZone=http://192.168.99.101:8761/eureka
+#eureka.client.service-url.defaultZone=http://127.0.0.1:8761/eureka
 eureka.instance.hostname=localhost
 #eureka.instance.prefer-ip-address=true
 #eureka.instance.ip-address=http://192.168.99.101:8761/eureka
